--- a/css/style.css
+++ b/css/style.css
@@ -21,28 +21,66 @@ body{
     min-height: 40px;
     align-items: center;
     justify-content: center;
-
 }
 
 .debug .titolino{
     min-width: 300px;
-    
-   
 }
 
 .debug .titolone{
     min-width: 600px;
     text-align: center;
-    
+}
+
+.debug .hparte2{
+    background-color: blue;
+    min-height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 5px solid cyan;
+}
+
+.debug .controsa{
+    background-color: plum;
+    min-height: 500px;
+    border: 3px dotted black;
+    min-width: 1000px;
+}
+
+.debug .main1{
+    background-color: white;
+    min-height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.debug .main2{
+    background-color: lightgray;
+    min-height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.mb1{
+
+}
+
+.mr1{
+
 }
 
 /*Header*/
+
 .login{
     border-left: 3px dotted black;
-    
+    text-align: end;
 }
 
 .logo{
     border-right: 3px dotted black;
-    
 }
+
+/*Main*/
