--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ body{
 }
 
 .debug .titoli {
-    background-color: blanchedalmond;
-    border: 2px dotted black;
+    background-color: goldenrod;
+    border: 2px dashed black;
     display: flex;
     min-height: 40px;
     align-items: center;
@@ -46,7 +46,7 @@ body{
 .debug .controsa{
     background-color: plum;
     min-height: 500px;
-    border: 3px dotted black;
+    border: 3px dashed black;
     min-width: 1000px;
 }
 
@@ -69,27 +69,27 @@ body{
 }
 
 .debug .mb1{
-    border: 3px dotted black;
+    border: 3px dashed black;
     min-height:500px;
     min-width: 600px;
     background-color: cyan;
 }
 
 .debug .mr1{
-    border: 3px dotted black;
+    border: 3px dashed black;
     min-height:500px;
     min-width: 400px;
     background-color: pink;
 }
 .debug .mb2{
-    border: 3px dotted black;
+    border: 3px dashed black;
     min-height:500px;
     min-width: 600px;
     background-color: pink;
 }
 
 .debug .mr2{
-    border: 3px dotted black;
+    border: 3px dashed black;
     min-height:500px;
     min-width: 400px;
     background-color: cyan;
@@ -97,7 +97,7 @@ body{
 .debug .mv1{
     background-color: green;
     min-height: 700px;
-    border: 3px dotted black;
+    border: 3px dashed black;
     min-width: 1000px;
 }
 .debug .main3{
@@ -123,14 +123,14 @@ body{
 }
 
 .debug .creditsrosa{
-    border: 3px dotted black;
+    border: 3px dashed black;
     min-height:500px;
     min-width: calc(1050px / 4);
     background-color: pink;
 }
 
 .debug .creditsblu{
-    border: 2px dotted white;
+    border: 2px dashed white;
     min-height:500px;
     min-width: calc(1050px / 6);
     background-color: cyan;
@@ -172,12 +172,12 @@ body{
 /*Header*/
 
 .login{
-    border-left: 3px dotted black;
-    text-align: end;
+    border-left: 3px dashed black;
+    text-align: right;
 }
 
 .logo{
-    border-right: 3px dotted black;
+    border-right: 3px dashed black;
 }
 
 ul {
@@ -193,9 +193,9 @@ ul {
 }
 
 .logo2{
-    border: 3px dotted black;
+    border: 3px dashed black;
 }
 
 .bottone{
-    border: 3px dotted black;
+    border: 3px dashed black;
 }
