--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 
 /*debug header*/
 .debug .hparte1{
-    background-color: skyblue;
+    /*background-color: skyblue;*/
     min-height: 70px;
     align-items: center;
     justify-content: center;
@@ -17,8 +17,8 @@ body{
 }
 
 .debug .titoli {
-    background-color: goldenrod;
-    border: 2px dashed black;
+    /*background-color: goldenrod;*/
+    /*border: 2px dashed black;*/
     display: flex;
     min-height: 40px;
     align-items: center;
@@ -35,25 +35,33 @@ body{
 }
 
 .debug .hparte2{
-    background-color: blue;
+    /*background-color: blue;*/
     min-height: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 5px solid cyan;
+    /*border-bottom: 5px solid cyan;*/
 }
 
 .debug .controsa{
-    background-color: plum;
-    min-height: 500px;
-    border: 3px dashed black;
-    min-width: 1000px;
+    /*background-color: plum;*/
+    max-height: 500px;
+    /*border: 3px dashed black;*/
+    max-width: 1000px;
 }
+
+.debug .slogan{
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    padding-top: 50px;
+}
+
 
 /*debug main*/
 
 .debug .main1{
-    background-color: white;
+    /*background-color: white;*/
     min-height: 600px;
     display: flex;
     align-items: center;
@@ -69,17 +77,21 @@ body{
 }
 
 .debug .mb1{
-    border: 3px dashed black;
+    /*border: 3px dashed black;*/
     min-height:500px;
     min-width: 600px;
-    background-color: cyan;
+    /*background-color: cyan;*/
+    background-image: url(../img/item1.svg);
+    background-repeat: no-repeat;
 }
 
 .debug .mr1{
-    border: 3px dashed black;
+    /*border: 3px dashed black;*/
+    max-height:500px;
+    max-width: 400px;
     min-height:500px;
     min-width: 400px;
-    background-color: pink;
+    /*background-color: pink;*/
 }
 .debug .mb2{
     border: 3px dashed black;
@@ -107,6 +119,12 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+.debug .slogan2{
+    font-size: 50px;
+    padding-top: 50px;
+}
+
 
 /*debug footer*/
 
@@ -172,20 +190,78 @@ body{
 /*Header*/
 
 .login{
-    border-left: 3px dashed black;
+    /*border-left: 3px dashed black;*/
     text-align: right;
 }
 
 .logo{
-    border-right: 3px dashed black;
+    /*border-right: 3px dashed black;*/
 }
 
 ul {
     list-style-type: none;
 }
 
+ul > a{
+    padding-right: 20px;
+    color: white;
+}
+
+.accedi{
+    border-radius: 40%;
+    background-color: white;
+    font-size: 15px;
+    height: 40px;
+    width: 100px;
+}
+
+header{
+    background-image: url(../img/jumbo.png);
+    background-size: 100%;
+}
+
+.testoheader{
+    color: white;
+    font-size: 23px;
+    padding-left: 100px;
+    padding-right: 100px;
+    text-align: center;
+}
+
+.bottoneheader1{
+    border-radius: 30%;
+    font-size: 25px;
+    background-color: white;
+    padding: 20px;
+    border: none;
+    margin-right: 20px;
+}
+
+.bottoneheader2{
+    border-radius: 30%;
+    font-size: 25px;
+    background-color: black;
+    padding: 20px;
+    color: white;
+    border: none;
+}
+
+.spaziobottoniheader{
+    text-align: center;
+}
+
+.freccina{
+    padding-right: 3px;
+}
 /*Main*/
 
+.testomain1{
+    font-size: 20px;
+}
+
+.mb1{
+    margin-right: 200px;
+}
 /*footer*/
 
 .bordofooter{
